# endstufe-esp32

./: .gitignore  Cargo.toml  HellsBells.raw  build.rs  partitions.csv  rust-toolchain.toml  sdkconfig.defaults  send_data.ps1
.cargo/: config.toml
src/: encoder.rs  hardware_context.rs  hardware_control.rs  hardware_init.rs  i2c_helper.rs  linkwitz_riley_coeffs.rs  main.rs  sticky_limiter.rs
src/api/: commands.rs
src/control/: audio_control.rs  gpio_control.rs  mod.rs
src/drivers/: adau1467.rs  adau1962a.rs  mod.rs  pcm1865.rs  tpa3116d2.rs
src/sigmastudio/: ADAU1467.c  ADAU1467.h  SigmaStudioFW.c  SigmaStudioFW.h  USER_SETTINGS.h  interop.rs  systemfiles_IC_1.h  systemfiles_IC_1_PARAM.h  systemfiles_IC_1_REG.h
src/web/: handler.rs  mod.rs  server.rs  wifi.rs
