[package]
name = "endstufe-esp32-test"
version = "0.2.0"
authors = ["LeanderGlanda <leander.wollersberger@gmx.at>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "endstufe-esp32-test"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

# experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
# esp-idf-svc = { version = "0.49", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
anyhow = "1.0.92"
esp-idf-svc = "=0.49.1"

[build-dependencies]
embuild = "0.32.0"
cc = "=1.1.35" # Necessary until a new version of `esp-idf-sys` is released
