[package]
name = "endstufe-esp32"
version = "0.1.0"
authors = ["LeanderGlanda <leander.wollersberger@gmx.at>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "endstufe-esp32"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.51", features = ["embassy-time-driver", "embassy-sync"] }
anyhow = "1.0.93"
serde = { version = "1.0", features = ["derive"] }
embassy-executor = { version = "0.7.0", features = ["arch-std"] }
embassy-time = { version = "0.4.0", features = ["generic-queue-32", "std"] }
embedded-svc = "0.28.1"
serde_json = "1.0.135"
rtp-rs = "0.6.0"

[build-dependencies]
embuild = { version = "0.33.0", features = ["espidf"] }
cc = "=1.1.30" # Necessary until a new version of `esp-idf-sys` is releasedD
which = "7"

[patch.crates-io]
esp-idf-svc = { git = "https://github.com/esp-rs/esp-idf-svc" }
esp-idf-hal = { git = "https://github.com/esp-rs/esp-idf-hal" }
esp-idf-sys = { git = "https://github.com/esp-rs/esp-idf-sys" }
